[package]
name = "commands"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.4"
anyhow = "1.0.44"
log = "0.4.14"
serde = { version = "1.0.130", features = [ "derive" ] }
uuid = "0.8.2"
quartz_nbt = { git = "https://github.com/Iaiao/quartz_nbt", branch = "parse_and_size", features = [ "serde" ] }